--- a/styles/style.css
+++ b/styles/style.css
@@ -145,7 +145,8 @@ p {
 }
 
 img {
-	max-width: 100%
+	max-width: 40px;
+    height: 40px;
 }
 
 .container {
@@ -547,14 +548,15 @@ body {
 	margin-bottom: 15px;
 	overflow: hidden;
 	background: #fff;
-	padding: 12px;
+	padding: 0;
+	padding-bottom: 0;
 	/*box-shadow: 0 0 4px 1px rgba(0, 0, 0, .1);*/
 	width: 100%;
 	border: 1px solid #e4e5e7;
 }
 
 .box-title {
-	margin: -15px -12px 15px;
+	margin: 0;
 	display: -webkit-box;
 	display: -ms-flexbox;
 	display: flex;
@@ -565,7 +567,7 @@ body {
 	-webkit-box-align: center;
 	-ms-flex-align: center;
 	align-items: center;
-	border-bottom: 2px solid #e4e5e7;
+	border-bottom: 1px solid #e4e5e7;
 	font-family: HelveticaNeueBold;
 	position: relative
 }
@@ -1188,7 +1190,7 @@ body {
 .tab.filter-days {
 	display: flex;
 	justify-content: space-between;
-	margin-bottom: 19px
+	margin: 20px 0
 }
 
 .tabselect {
@@ -1240,13 +1242,24 @@ body {
 
 .tabcontent table td {
 	text-align: center;
-    padding: 10px 5px;
-    border: 1px solid #e4e5e7;	
+	padding: 10px 5px;	
+    font-weight: bold;
+	color: #1b262c;
+	font-size: 14px;	
 }
 
-.tabcontent table tr:hover {
+.tabcontent .titleStatic {
+	color: #949494;
+	width: 55%;
+}
+
+.tabcontent table tr:hover td{
     background-color: #1b262c;
     color: #fff;
+}
+
+.tabcontent table {
+	margin-bottom: 10px;
 }
 
 #today {
@@ -1300,8 +1313,8 @@ body {
 	float: right;
 	background: #fff;
 	padding: 10px;
-	margin-bottom: 10px;
-	position: relative
+	position: relative;
+	border-bottom: 1px solid #e4e5e7;
 }
 
 #alba_sports_events {
@@ -1404,12 +1417,11 @@ body {
 
 .alba_sports_events-team_title {
 	display: block;
-	font-size: 15px;
+	font-size: 14px;
 	width: 100%;
 	margin: 0;
-	color: #0277bd;
+	color: #777777;
 	text-align: center;
-	font-weight: 700;
 	line-height: 15px;
 }
 
@@ -1426,9 +1438,9 @@ body {
 }
 
 .event_title_wrapper .matchTime {
-	font-family: arial;
+	font-family: Arial, Helvetica, sans-serif;
 	direction: ltr;
-	font-size: 2.2em;
+	font-size: 2em;
 	color: #4d4f58;
 	font-weight: 700;
 	padding: 0;
@@ -1469,8 +1481,7 @@ body {
 
 .matchStatus .status p {
 	color: #fff;
-	padding: 0 14px 1px;
-	border-radius: 3px;
+	padding: 0 25px 1px;
 	background: #0277bd;
 	font-weight: 700;
 	line-height: 20px;
@@ -1663,7 +1674,7 @@ span .fa-television {
 		font-size: 1.5em
 	}
 	.matchStatus .status p {
-		font-size: 9px
+		font-size: 11px
 	}
 	.events-info span.mic {
 		display: none
@@ -1719,8 +1730,8 @@ span .fa-television {
 		margin-top: 2px
 	}
 	.matchStatus .status p {
-		font-size: 8px;
-		padding: 0 5px 1px
+		font-size: 11px;
+		padding: 0 15px 1px
 	}
 	.alba_sports_events-team_title {
 		font-size: 10px;
@@ -4468,11 +4479,6 @@ table .name svg {
 	display: block
 }
 
-.sidebar-wrapper .menu,
-.sidebar-wrapper .tarteb {
-	margin: -12px
-}
-
 .sidebar-widget .tarteb a,
 .sidebar-wrapper .widget_nav_menu div a {
 	display: -webkit-box;
@@ -5211,6 +5217,32 @@ table .name svg {
 .ui-widget-content .ui-state-disabled .ui-state-default:hover {
 	background: #fff;
 	color: #ddd
+}
+
+.containCompetitions {
+	display: flex;
+	flex-wrap: wrap;
+	margin: 10px 0;
+}
+
+.containCompetitions a{
+    margin: 5px;
+    padding: 0 15px;
+	display: flex;
+	width: 32%;
+    align-items: center;
+    background: #fff;
+}
+
+.logoCompetitions {
+	max-width: 55px;
+    padding: 15px;
+    padding-right: 0;
+}
+
+.nameCompetitions p{
+	font-size: 14px;
+	font-family: HelveticaNeueBold;
 }
 
 @media screen and (max-width:1060px) {
